# cairn

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: BENCHMARK.md  DESIGN.md
src/cairn/: __init__.py  __main__.py  backend.py  bench.py  cli.py  config.py  paths.py  profiles.py
tests/: test_cli.py  test_config.py  test_profiles.py
